--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "772e93c9-35d7-492e-949d-a54564c4815b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
